--- a/LH_DS_FranciscoGildevanioBezerraSalesJunior.ipynb
+++ b/LH_DS_FranciscoGildevanioBezerraSalesJunior.ipynb
@@ -13,7 +13,7 @@
    "id": "6f64c6b6-af1e-44d5-9acb-c7cb03a2fbed",
    "metadata": {},
    "source": [
-    "# 0.0 Considerações iniciais do projeto:"
+    "# Considerações iniciais do projeto:"
    ]
   },
   {
@@ -29,7 +29,34 @@
    "id": "6c8ab207-2dd7-4320-9ef7-04be78aa7964",
    "metadata": {},
    "source": [
-    "## 1.0 Análise exploratória de dados:"
+    "## 1.0 Carregando bibliotecas que serão utilizadas na primeira parte do projeto(EDA):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a10cd5a6-cd67-4bf0-a032-2ac94d723380",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#bibliotecas\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython.display import display\n",
+    "import numpy as np\n",
+    "\n",
+    "#estilo adotado no seaborn para cores e estilização dos gráficos\n",
+    "sns.set(style=\"white\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "770db804-eab3-4dd0-bcf3-9de3897285d9",
+   "metadata": {},
+   "source": [
+    "#### 1.1 configurando o caminho dos arquivos"
    ]
   }
  ],
